--- a/src/components/category-preview/category-preview.styles.scss
+++ b/src/components/category-preview/category-preview.styles.scss
@@ -4,11 +4,12 @@
   margin-bottom: 30px;
 
   .title {
+    text-decoration: none;
     font-size: 28px;
     margin-bottom: 25px;
     cursor: pointer;
   }
-
+  
   .preview {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
